--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
     "@reach/dialog": "^0.11.0",
     "@reach/tabs": "^0.11.0",
     "@reach/visually-hidden": "^0.11.0",
+    "axios": "^0.20.0",
+    "dotenv": "^8.2.0",
     "gatsby": "^2.24.47",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-netlify-identity": "^0.2.5",
     "react-netlify-identity-widget": "^0.2.7"
+  },
+  "devDependencies": {
+    "prettier": "^2.0.5"
   }
 }
